--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GoRiddles">
+        android:theme="@style/Theme.GoRiddles"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".ac.MainActivity"
             android:exported="true"
